<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f2f2f2"
    android:orientation="vertical"
    android:paddingTop="@dimen/dimen20">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen17"
        android:gravity="center"
        android:text="@string/modify_pwd_hint"
        android:textColor="@color/color_808080"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_old_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen20"
            android:text="@string/current_pwd"
            android:textColor="@color/color_1A1A1A"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_old_pwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="bottom"
            android:hint="@string/current_pwd_hint"
            android:inputType="textPassword"
            android:textColor="@color/color_808080"
            android:textColorHint="@color/color_808080"
            android:textCursorDrawable="@null"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_ebebeb"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="@dimen/dimen15">

        <TextView
            android:id="@+id/tv_new_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen20"
            android:text="@string/new_pwd"
            android:textColor="@color/color_1A1A1A"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="bottom"
            android:hint="@string/new_pwd_hint"
            android:inputType="textPassword"
            android:textColor="@color/color_808080"
            android:textColorHint="@color/color_808080"
            android:textCursorDrawable="@null"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_ebebeb"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="@dimen/dimen15">

        <TextView
            android:id="@+id/tv_confirm_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen20"
            android:text="@string/confirm_pwd"
            android:textColor="@color/color_1A1A1A"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_confirm_pwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="bottom"
            android:hint="@string/confirm_pwd_hint"
            android:inputType="textPassword"
            android:textColor="@color/color_808080"
            android:textColorHint="@color/color_808080"
            android:textCursorDrawable="@null"
            android:textSize="16sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_ebebeb"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen15"
        android:layout_marginTop="@dimen/dimen20"
        android:background="@drawable/shape_r16_23a0e5"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen10"
        android:paddingTop="@dimen/dimen10"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="@dimen/size16"/>
</LinearLayout>