<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_r16_fff"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="21dp"
        android:text="@string/distribution_way"
        android:textColor="@color/color_1A1A1A"
        android:textSize="@dimen/size18"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_ebebeb"/>
    <TextView
        android:id="@+id/deparment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingTop="19dp"
        android:text="@string/colleage"
        android:textColor="@color/color_1A1A1A"
        android:textSize="@dimen/size16"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_ebebeb"/>
    <TextView
        android:id="@+id/colleage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingTop="19dp"
        android:text="@string/department"
        android:textColor="@color/color_1A1A1A"
        android:textSize="@dimen/size16"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_ebebeb"/>
    <TextView
        android:id="@+id/school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingTop="19dp"
        android:text="@string/school"
        android:textColor="@color/color_1A1A1A"
        android:textSize="@dimen/size16"/>

</LinearLayout>